# NTNU

IDATT1001 Programmering 1/oving 1/: Oving1Oppg1.java  Oving1Oppg2.java  OvingOppg3.java
IDATT1001 Programmering 1/oving 11/: Eiendom.java  EiendomsRegister.java  Klientprogram.java
IDATT1001 Programmering 1/oving 2/: Oving2Oppg1.java  Oving2Oppg2.java
IDATT1001 Programmering 1/oving 3/: Oving3Oppg1.java  Oving3Oppg2.java
IDATT1001 Programmering 1/oving 4/: Spiller.java  TerningSpill.java  Valuta.java
IDATT1001 Programmering 1/oving 5/: MinRandom.java  brok.java  brokRegning.java
IDATT2001 Programmering 2/: .gitignore
IDATT2001 Programmering 2/Oving4/: pom.xml
IDATT2101 Algoritmer og datastrukturer/: .gitignore  readme.md
IDATT2104 Nettverksprogrammering/: .gitignore
IDATT2502 Anvendt maskinlæring/: device.py
INFT2503 C++ for programmerere/: .gitignore  README.md
INFT2503 C++ for programmerere/exercise 3/: CMakeLists.txt
INFT2503 C++ for programmerere/exercise 3/Task12/: Circle.cpp  Circle.hpp
INFT2503 C++ for programmerere/exercise 3/Task3/: Commodity.cpp  Commodity.hpp
INFT2503 C++ for programmerere/exercise 3/Task4/: main.cpp
INFT2503 C++ for programmerere/exercise 4/Task 2/: CMakeLists.txt  main.cpp
INFT2503 C++ for programmerere/exercise 6/: CMakeLists.txt  Chess.cpp  HTTPServer.cpp
MOL3022 Bioinformatikk metodeorientert prosjekt/: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  model.py  predict.py  preprocessing.py  requirements.txt  server.py  train.py  utils.py
TDT4150 Avanserte databasesystemer/: index.html
(+488 files in other folders)
